fix alignment issue

--- a/src/Views/Home/style.scss
+++ b/src/Views/Home/style.scss
@@ -474,7 +474,7 @@
             @include makeFontSmoth(0.147rem, #1c1c1c);
         }
         .email-container {
-            @include flex(center, space-between, row);
+            @include flex(flex-end, space-between, row);
             .email {
                 border: none;
                 width: 80%;
@@ -506,9 +506,9 @@
                 cursor: pointer;
                 text-transform: capitalize;
                 font-size: 1.625rem;
+                line-height: 2.625rem;
                 font-family: 'CircularXXWeb-Book';
                 @include makeFontSmoth(0.147rem, #1c1c1c);
-                line-height: 1.4;
                 // padding-bottom: 2px;
                 &:hover {
                     color: $primary;
